Removed prototype from example
Prototypes are usually deprecated and in every case not to be used
lightly. Removed a prototype from one example that really didn't need
it.

--- a/pod/perlsyn.pod
+++ b/pod/perlsyn.pod
@@ -842,7 +842,7 @@ and your documentation text freely, as in
 
     =cut back to the compiler, nuff of this pod stuff!
 
-    sub snazzle($) {
+    sub snazzle {
 	my $thingie = shift;
 	.........
     }
