--- a/pod/perldata.pod
+++ b/pod/perldata.pod
@@ -332,7 +332,7 @@ expression as a subscript.)  The following code segment prints out "The
 price is $Z<>100."
 X<interpolation>
 
-    $Price = '$100';	# not interpolated
+    my $Price = '$100';	# not interpolated
     print "The price is $Price.\n";	# interpolated
 
 There is no double interpolation in Perl, so the C<$100> is left as is.
@@ -351,7 +351,7 @@ variable name from a following double-colon or an apostrophe, since
 these would be otherwise treated as a package separator:
 X<interpolation>
 
-    $who = "Larry";
+    my $who = "Larry";
     print $passwd_fh "${who}::0:0:Superuser:/:/bin/perl\n";
     print "We use ${who}speak when ${who}'s here.\n";
 
@@ -459,7 +459,7 @@ by joining the elements with the delimiter specified in the C<$">
 variable (C<$LIST_SEPARATOR> if "use English;" is specified), 
 space by default.  The following are equivalent:
 
-    $temp = join($", @ARGV);
+    my $temp = join($", @ARGV);
     system "echo $temp";
 
     system "echo @ARGV";
@@ -490,23 +490,23 @@ In a context not requiring a list value, the value of what appears
 to be a list literal is simply the value of the final element, as
 with the C comma operator.  For example,
 
-    @foo = ('cc', '-E', $bar);
+    my @foo = ('cc', '-E', $bar);
 
 assigns the entire list value to array @foo, but
 
-    $foo = ('cc', '-E', $bar);
+    my $foo = ('cc', '-E', $bar);
 
 assigns the value of variable $bar to the scalar variable $foo.
 Note that the value of an actual array in scalar context is the
 length of the array; the following assigns the value 3 to $foo:
 
-    @foo = ('cc', '-E', $bar);
-    $foo = @foo;                # $foo gets 3
+    my @foo = ('cc', '-E', $bar);
+    my $foo = @foo;                # $foo gets 3
 
 You may have an optional comma before the closing parenthesis of a
 list literal, so that you can say:
 
-    @foo = (
+    my @foo = (
         1,
         2,
         3,
@@ -515,7 +515,7 @@ list literal, so that you can say:
 To use a here-document to assign an array, one line per element,
 you might use an approach like this:
 
-    @sauces = <<End_Lines =~ m/(\S.*\S)/g;
+    my @sauces = <<End_Lines =~ m/(\S.*\S)/g;
         normal tomato
         spicy tomato
         green chile
@@ -554,14 +554,14 @@ A list value may also be subscripted like a normal array.  You must
 put the list in parentheses to avoid ambiguity.  For example:
 
     # Stat returns list value.
-    $time = (stat($file))[8];
+    my $time = (stat($file))[8];
 
     # SYNTAX ERROR HERE.
-    $time = stat($file)[8];  # OOPS, FORGOT PARENTHESES
+    my $time = stat($file)[8];  # OOPS, FORGOT PARENTHESES
 
     # Find a hex digit.
-    $hexdigit = ('a','b','c','d','e','f')[$digit-10]; # OR
-    $hexdigit = ('a'..'f')[$digit-10];
+    my $hexdigit = ('a','b','c','d','e','f')[$digit-10]; # OR
+    my $hexdigit = ('a'..'f')[$digit-10];
 
     # A "reverse comma operator".
     return (pop(@foo),pop(@foo))[0];
@@ -569,7 +569,7 @@ put the list in parentheses to avoid ambiguity.  For example:
 Lists may be assigned to only when each element of the list
 is itself legal to assign to:
 
-    ($a, $b, $c) = (1, 2, 3);
+    my ($a, $b, $c) = (1, 2, 3);
 
     ($map{'red'}, $map{'blue'}, $map{'green'}) = (0x00f, 0x0f0, 0xf00);
 
@@ -577,12 +577,12 @@ An exception to this is that you may assign to C<undef> in a list.
 This is useful for throwing away some of the return values of a
 function:
 
-    ($dev, $ino, undef, undef, $uid, $gid) = stat($file);
+    my ($dev, $ino, undef, undef, $uid, $gid) = stat($file);
 
 List assignment in scalar context returns the number of elements
 produced by the expression on the right side of the assignment:
 
-    $x = (($foo,$bar) = (3,2,1));       # set $x to 3, not 2
+    my $x = (($foo,$bar) = (3,2,1));    # set $x to 3, not 2
     $x = (($foo,$bar) = f());           # set $x to f()'s return count
 
 This is handy when you want to do a list assignment in a Boolean
@@ -594,7 +594,7 @@ performing an operation in list context and then counting the number of
 return values, by assigning to an empty list and then using that
 assignment in scalar context. For example, this code:
 
-    $count = () = $string =~ /\d+/g;
+    my $count = () = $string =~ /\d+/g;
 
 will place into $count the number of digit groups found in $string.
 This happens because the pattern match is in list context (since it
@@ -604,15 +604,15 @@ context will translate that into the number of elements (here, the
 number of times the pattern matched) and assign that to $count. Note
 that simply using
 
-    $count = $string =~ /\d+/g;
+    my $count = $string =~ /\d+/g;
 
 would not have worked, since a pattern match in scalar context will
 only return true or false, rather than a count of matches.
 
 The final element of a list assignment may be an array or a hash:
 
-    ($a, $b, @rest) = split;
-    my($a, $b, %rest) = @_;
+    my ($a, $b, @rest) = split;
+    my ($a, $b, %rest) = @_;
 
 You can actually put an array or hash anywhere in the list, but the first one
 in the list will soak up all the values, and anything after it will become
@@ -622,7 +622,7 @@ A hash can be initialized using a literal list holding pairs of
 items to be interpreted as a key and a value:
 
     # same as map assignment above
-    %map = ('red',0x00f,'blue',0x0f0,'green',0xf00);
+    my %map = ('red',0x00f,'blue',0x0f0,'green',0xf00);
 
 While literal lists and named arrays are often interchangeable, that's
 not the case for hashes.  Just because you can subscript a list value like
@@ -638,7 +638,7 @@ interpreted as a string -- if it's a bareword that would be a legal simple
 identifier (C<< => >> doesn't quote compound identifiers, that contain
 double colons). This makes it nice for initializing hashes:
 
-    %map = (
+    my %map = (
                  red   => 0x00f,
                  blue  => 0x0f0,
                  green => 0xf00,
@@ -646,7 +646,7 @@ double colons). This makes it nice for initializing hashes:
 
 or for initializing hash references to be used as records:
 
-    $rec = {
+    my $rec = {
                 witch => 'Mable the Merciless',
                 cat   => 'Fluffy the Ferocious',
                 date  => '10/31/1776',
@@ -654,7 +654,7 @@ or for initializing hash references to be used as records:
 
 or for using call-by-named-parameter to complicated functions:
 
-   $field = $query->radio_group(
+   my $field = $query->radio_group(
                name      => 'group_name',
                values    => ['eenie','meenie','minie'],
                default   => 'meenie',
@@ -672,7 +672,7 @@ An array is subscripted by specifying a dollar sign (C<$>), then the
 name of the array (without the leading C<@>), then the subscript inside
 square brackets.  For example:
 
-    @myarray = (5, 50, 500, 5000);
+    my @myarray = (5, 50, 500, 5000);
     print "The Third Element is", $myarray[2], "\n";
 
 The array indices start with 0. A negative subscript retrieves its 
@@ -682,7 +682,7 @@ value from the end.  In our example, C<$myarray[-1]> would have been
 Hash subscripts are similar, only instead of square brackets curly brackets
 are used. For example:
 
-    %scientists = 
+    my %scientists = 
     (
         "Newton" => "Isaac",
         "Einstein" => "Albert",
@@ -698,19 +698,19 @@ X<slice> X<array, slice> X<hash, slice>
 A common way to access an array or a hash is one scalar element at a
 time.  You can also subscript a list to get a single element from it.
 
-    $whoami = $ENV{"USER"};             # one element from the hash
-    $parent = $ISA[0];                  # one element from the array
-    $dir    = (getpwnam("daemon"))[7];  # likewise, but with list
+    my $whoami = $ENV{"USER"};             # one element from the hash
+    my $parent = $ISA[0];                  # one element from the array
+    my $dir    = (getpwnam("daemon"))[7];  # likewise, but with list
 
 A slice accesses several elements of a list, an array, or a hash
 simultaneously using a list of subscripts.  It's more convenient
 than writing out the individual elements as a list of separate
 scalar values.
 
-    ($him, $her)   = @folks[0,-1];              # array slice
-    @them          = @folks[0 .. 3];            # array slice
-    ($who, $home)  = @ENV{"USER", "HOME"};      # hash slice
-    ($uid, $dir)   = (getpwnam("daemon"))[2,7]; # list slice
+    my ($him, $her)   = @folks[0,-1];              # array slice
+    my @them          = @folks[0 .. 3];            # array slice
+    my ($who, $home)  = @ENV{"USER", "HOME"};      # hash slice
+    my ($uid, $dir)   = (getpwnam("daemon"))[2,7]; # list slice
 
 Since you can assign to a list of variables, you can also assign to
 an array or hash slice.
@@ -741,19 +741,19 @@ values of the array or hash.
 
 A slice of an empty list is still an empty list.  Thus:
 
-    @a = ()[1,0];           # @a has no elements
-    @b = (@a)[0,1];         # @b has no elements
-    @c = (0,1)[2,3];        # @c has no elements
+    my @a = ()[1,0];           # @a has no elements
+    my @b = (@a)[0,1];         # @b has no elements
+    my @c = (0,1)[2,3];        # @c has no elements
 
 But:
 
-    @a = (1)[1,0];          # @a has two elements
-    @b = (1,undef)[1,0,2];  # @b has three elements
+    my @a = (1)[1,0];          # @a has two elements
+    my @b = (1,undef)[1,0,2];  # @b has three elements
 
 This makes it easy to write loops that terminate when a null list
 is returned:
 
-    while ( ($home, $user) = (getpwent)[7,0]) {
+    while (my ($home, $user) = (getpwent)[7,0]) {
         printf "%-8s %s\n", $user, $home;
     }
 
@@ -799,11 +799,11 @@ Another use for typeglobs is to pass filehandles into a function or
 to create new filehandles.  If you need to use a typeglob to save away
 a filehandle, do it this way:
 
-    $fh = *STDOUT;
+    my $fh = *STDOUT;
 
 or perhaps as a real reference, like this:
 
-    $fh = \*STDOUT;
+    my $fh = \*STDOUT;
 
 See L<perlsub> for examples of using these as indirect filehandles
 in functions.
