Reverted change to pre-5.6.0 code
There was no 3-argument form of open before 5.6.0

--- a/pod/perldata.pod
+++ b/pod/perldata.pod
@@ -817,7 +817,7 @@ For example:
     sub newopen {
         my $path = shift;
         local  *FH;  # not my!
-        open   (FH, '<', $path)          or  return undef;
+        open   (FH, $path)          or  return undef;
         return *FH;
     }
     $fh = newopen('/etc/passwd');
