--- a/pod/perldata.pod
+++ b/pod/perldata.pod
@@ -863,6 +863,12 @@ have the advantage of not hiding different types of the same name
 during the local().  See the bottom of L<perlfunc/open()> for an
 example.
 
+Note that the above example will not work for Perl before 5.8.0,
+even though Perl 5.6.0 already supports the three-argument form
+of C<open()>. In this case, you have to resort to the anonymous
+filehandle creation provided by either the Symbol module or by
+IO::Handle.
+
 =head1 SEE ALSO
 
 See L<perlvar> for a description of Perl's built-in variables and
