--- a/pod/perldata.pod
+++ b/pod/perldata.pod
@@ -351,8 +351,8 @@ variable name from a following double-colon or an apostrophe, since
 these would be otherwise treated as a package separator:
 X<interpolation>
 
-    my $who = "Larry";
-    print $passwd_fh "${who}::0:0:Superuser:/:/bin/perl\n";
+    $who = "Larry";
+    print {$fh} "${who}::0:0:Superuser:/:/bin/perl\n";
     print "We use ${who}speak when ${who}'s here.\n";
 
 Without the braces, Perl would have looked for a $whospeak, a
