--- a/pod/perldata.pod
+++ b/pod/perldata.pod
@@ -332,7 +332,7 @@ expression as a subscript.)  The following code segment prints out "The
 price is $Z<>100."
 X<interpolation>
 
-    my $Price = '$100';	# not interpolated
+    $Price = '$100';	# not interpolated
     print "The price is $Price.\n";	# interpolated
 
 There is no double interpolation in Perl, so the C<$100> is left as is.
@@ -490,23 +490,23 @@ In a context not requiring a list value, the value of what appears
 to be a list literal is simply the value of the final element, as
 with the C comma operator.  For example,
 
-    my @foo = ('cc', '-E', $bar);
+    @foo = ('cc', '-E', $bar);
 
 assigns the entire list value to array @foo, but
 
-    my $foo = ('cc', '-E', $bar);
+    $foo = ('cc', '-E', $bar);
 
 assigns the value of variable $bar to the scalar variable $foo.
 Note that the value of an actual array in scalar context is the
 length of the array; the following assigns the value 3 to $foo:
 
-    my @foo = ('cc', '-E', $bar);
-    my $foo = @foo;                # $foo gets 3
+    @foo = ('cc', '-E', $bar);
+    $foo = @foo;                # $foo gets 3
 
 You may have an optional comma before the closing parenthesis of a
 list literal, so that you can say:
 
-    my @foo = (
+    @foo = (
         1,
         2,
         3,
@@ -515,7 +515,7 @@ list literal, so that you can say:
 To use a here-document to assign an array, one line per element,
 you might use an approach like this:
 
-    my @sauces = <<End_Lines =~ m/(\S.*\S)/g;
+    @sauces = <<End_Lines =~ m/(\S.*\S)/g;
         normal tomato
         spicy tomato
         green chile
@@ -554,14 +554,14 @@ A list value may also be subscripted like a normal array.  You must
 put the list in parentheses to avoid ambiguity.  For example:
 
     # Stat returns list value.
-    my $time = (stat($file))[8];
+    $time = (stat($file))[8];
 
     # SYNTAX ERROR HERE.
-    my $time = stat($file)[8];  # OOPS, FORGOT PARENTHESES
+    $time = stat($file)[8];  # OOPS, FORGOT PARENTHESES
 
     # Find a hex digit.
-    my $hexdigit = ('a','b','c','d','e','f')[$digit-10]; # OR
-    my $hexdigit = ('a'..'f')[$digit-10];
+    $hexdigit = ('a','b','c','d','e','f')[$digit-10]; # OR
+    $hexdigit = ('a'..'f')[$digit-10];
 
     # A "reverse comma operator".
     return (pop(@foo),pop(@foo))[0];
@@ -569,7 +569,7 @@ put the list in parentheses to avoid ambiguity.  For example:
 Lists may be assigned to only when each element of the list
 is itself legal to assign to:
 
-    my ($a, $b, $c) = (1, 2, 3);
+    ($a, $b, $c) = (1, 2, 3);
 
     ($map{'red'}, $map{'blue'}, $map{'green'}) = (0x00f, 0x0f0, 0xf00);
 
@@ -582,8 +582,8 @@ function:
 List assignment in scalar context returns the number of elements
 produced by the expression on the right side of the assignment:
 
-    my $x = (($foo,$bar) = (3,2,1));    # set $x to 3, not 2
-    $x = (($foo,$bar) = f());           # set $x to f()'s return count
+    $x = (($foo,$bar) = (3,2,1));    # set $x to 3, not 2
+    $x = (($foo,$bar) = f());        # set $x to f()'s return count
 
 This is handy when you want to do a list assignment in a Boolean
 context, because most list functions return a null list when finished,
@@ -594,7 +594,7 @@ performing an operation in list context and then counting the number of
 return values, by assigning to an empty list and then using that
 assignment in scalar context. For example, this code:
 
-    my $count = () = $string =~ /\d+/g;
+    $count = () = $string =~ /\d+/g;
 
 will place into $count the number of digit groups found in $string.
 This happens because the pattern match is in list context (since it
@@ -604,7 +604,7 @@ context will translate that into the number of elements (here, the
 number of times the pattern matched) and assign that to $count. Note
 that simply using
 
-    my $count = $string =~ /\d+/g;
+    $count = $string =~ /\d+/g;
 
 would not have worked, since a pattern match in scalar context will
 only return true or false, rather than a count of matches.
@@ -690,7 +690,7 @@ are used. For example:
         "Feynman" => "Richard",
     );
 
-    print "Darwin's First Name is ", $scientists{"Darwin"}, "\n";
+    print "Darwin's First Name is ", $scientists{Darwin}, "\n";
 
 =head2 Slices
 X<slice> X<array, slice> X<hash, slice>
@@ -698,19 +698,19 @@ X<slice> X<array, slice> X<hash, slice>
 A common way to access an array or a hash is one scalar element at a
 time.  You can also subscript a list to get a single element from it.
 
-    my $whoami = $ENV{"USER"};             # one element from the hash
-    my $parent = $ISA[0];                  # one element from the array
-    my $dir    = (getpwnam("daemon"))[7];  # likewise, but with list
+    $whoami = $ENV{"USER"};             # one element from the hash
+    $parent = $ISA[0];                  # one element from the array
+    $dir    = (getpwnam("daemon"))[7];  # likewise, but with list
 
 A slice accesses several elements of a list, an array, or a hash
 simultaneously using a list of subscripts.  It's more convenient
 than writing out the individual elements as a list of separate
 scalar values.
 
-    my ($him, $her)   = @folks[0,-1];              # array slice
-    my @them          = @folks[0 .. 3];            # array slice
-    my ($who, $home)  = @ENV{"USER", "HOME"};      # hash slice
-    my ($uid, $dir)   = (getpwnam("daemon"))[2,7]; # list slice
+    ($him, $her)   = @folks[0,-1];              # array slice
+    @them          = @folks[0 .. 3];            # array slice
+    ($who, $home)  = @ENV{"USER", "HOME"};      # hash slice
+    ($uid, $dir)   = (getpwnam("daemon"))[2,7]; # list slice
 
 Since you can assign to a list of variables, you can also assign to
 an array or hash slice.
@@ -741,14 +741,14 @@ values of the array or hash.
 
 A slice of an empty list is still an empty list.  Thus:
 
-    my @a = ()[1,0];           # @a has no elements
-    my @b = (@a)[0,1];         # @b has no elements
-    my @c = (0,1)[2,3];        # @c has no elements
+    @a = ()[1,0];           # @a has no elements
+    @b = (@a)[0,1];         # @b has no elements
+    @c = (0,1)[2,3];        # @c has no elements
 
 But:
 
-    my @a = (1)[1,0];          # @a has two elements
-    my @b = (1,undef)[1,0,2];  # @b has three elements
+    @a = (1)[1,0];          # @a has two elements
+    @b = (1,undef)[1,0,2];  # @b has three elements
 
 This makes it easy to write loops that terminate when a null list
 is returned:
